# rust-fib

./: Cargo.toml  README.md  setup.py
fib_rs/: __init__.py
src/: lib.rs
src/fib_calcs/: fib_number_command.py
