[package]
name = "rust-fib"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Gabriel Amaral de Oliveira <eduardo.g.amaral1997@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }

[lib]
name = "fib_rs"
crate-type = ["cdylib"]

